# EchoPay

./: .gitignore  Pages.md  Project.md  Project_description.md  README.md  bunq_payment_integration_plan.md  client.py  customer_client.py  customer_provisioning.py
agent/: .gitignore  pyproject.toml
agent/app/: __init__.py  config.py  main.py
agent/app/routes/: __init__.py  agent.py  health.py  payments.py  voice.py
agent/app/services/: adk_loop.py  adk_tools.py  bunq_service.py  customer_provisioning.py  supabase_context.py
agent/echopay_adk/: __init__.py  agent.py
agent/scripts/: register_webhook.py  seed_funds.py  smoke_test.py
agent/tests/: conftest.py  test_bunq_service.py  test_payments_routes.py  test_routes.py
app/: pubspec.yaml  table_schema.md
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/model/: voice_order_result.dart
app/lib/models/: voice_order_result.dart
app/lib/pages/: admin_analytics.dart  admin_dashboard.dart  admin_kds_tab.dart  admin_menu_management.dart  admin_qr_tab.dart  landing.dart  role_router.dart  shop_setting.dart  user_home.dart  user_order.dart
app/lib/services/: agent.dart  auth.dart  backend_config.dart  checkout_session_store.dart  order.dart  payment.dart  provider.dart  restaurant.dart  supabase.dart  voice_agent_tts_service.dart  voice_order_service.dart  whisper.dart
app/test/model/: voice_order_result_test.dart
app/test/pages/: user_home_voice_draft_test.dart
app/test/services/: voice_order_service_test.dart
bunq/: README.md
(+1 files in other folders)
