[project]
name = "echopay-agent"
version = "0.1.0"
description = "EchoPay AI agent — FastAPI service powering the bunq payment loop"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.124.*",
  "uvicorn[standard]==0.38.*",
  "pydantic==2.12.*",
  "python-dotenv==1.0.*",
  "python-multipart==0.0.*",
  "httpx==0.28.*",
  "anthropic==0.39.*",
  "supabase>=2.9.0",
  "voyageai==0.3.*",
  "pyjwt==2.12.*",
  "cryptography>=41.0",
  "requests>=2.28",
  "pytest==8.*",
  "google-adk==1.30.0",
  "litellm>=1.83.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "echopay_adk*"]
namespaces = false
